--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>CS 543 Project 5</title>
+        <title>Interactive Ray Tracer</title>
 
         <script id="vshader" type="x-shader/x-vertex">
             attribute vec3 aPosition;
@@ -352,11 +352,11 @@
             }
         </script>
 
-        <script src="lib/webgl-utils.js"></script>
-        <script src="lib/initShaders.js"></script>
-        <script src="lib/MV.js"></script>
+        <script src="../lib/webgl-utils.js"></script>
+        <script src="../lib/initShaders.js"></script>
+        <script src="../lib/MV.js"></script>
 
-        <script src="main.js"></script>
+        <script src="../js/main.js"></script>
     </head>
 
     <body onload="main()">
